re PR sanitizer/64265 (r217669 broke tsan)

PR sanitizer/64265
	* tsan.c (instrument_func_entry): Insert __tsan_func_entry
	call on edge from entry block to single succ instead
	of after labels of single succ of entry block.

From-SVN: r218736